Finished reading the Introduction part

--- a/notebooks/1_Introduction/basic_operations.ipynb
+++ b/notebooks/1_Introduction/basic_operations.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Basic Operations example using TensorFlow library.\n",
@@ -16,41 +14,55 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/saeedarabi/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/saeedarabi/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Basic constant operations\n",
-    "# The value returned by the constructor represents the output\n",
-    "# of the Constant op.\n",
-    "a = tf.constant(2)\n",
-    "b = tf.constant(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a=2, b=3\n",
+      "Tensor(\"Const_20:0\", shape=(), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic constant operations\n",
+    "# The value returned by the constructor represents the output\n",
+    "# of the Constant op.\n",
+    "a = tf.constant(2)\n",
+    "b = tf.constant(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 2 b: 3\n",
       "Addition with constants: 5\n",
       "Multiplication with constants: 6\n"
      ]
@@ -59,33 +71,29 @@
    "source": [
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
-    "    print \"a: %i\" % sess.run(a), \"b: %i\" % sess.run(b)\n",
-    "    print \"Addition with constants: %i\" % sess.run(a+b)\n",
-    "    print \"Multiplication with constants: %i\" % sess.run(a*b)"
+    "    print (\"a: %i\" %sess.run(a), \"b: %i\" %sess.run(b))\n",
+    "    print (\"Addition with constants: %i\" % sess.run(a+b))\n",
+    "    print (\"Multiplication with constants: %i\" % sess.run(a*b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Basic Operations with variable as graph input\n",
     "# The value returned by the constructor represents the output\n",
     "# of the Variable op. (define as input when running session)\n",
     "# tf Graph input\n",
-    "a = tf.placeholder(tf.int16)\n",
-    "b = tf.placeholder(tf.int16)"
+    "a = tf.placeholder(tf.int8)\n",
+    "b = tf.placeholder(tf.int8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define some operations\n",
@@ -95,10 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -113,17 +119,26 @@
     "# Launch the default graph.\n",
     "with tf.Session() as sess:\n",
     "    # Run every operation with variable input\n",
-    "    print \"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3})\n",
-    "    print \"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3})"
+    "    print (\"Addition with variables: %i\" % sess.run(add, feed_dict={a: 2, b: 3}))\n",
+    "    print (\"Multiplication with variables: %i\" % sess.run(mul, feed_dict={a: 2, b: 3}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'Const_31:0' shape=(1, 2) dtype=float32>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ----------------\n",
     "# More in details:\n",
@@ -134,15 +149,15 @@
     "#\n",
     "# The value returned by the constructor represents the output\n",
     "# of the Constant op.\n",
-    "matrix1 = tf.constant([[3., 3.]])"
+    "matrix1 = tf.constant([[3., 3.]])\n",
+    "\n",
+    "matrix1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create another Constant that produces a 2x1 matrix.\n",
@@ -151,30 +166,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create a Matmul op that takes 'matrix1' and 'matrix2' as inputs.\n",
-    "# The returned value, 'product', represents the result of the matrix\n",
-    "# multiplication.\n",
-    "product = tf.matmul(matrix1, matrix2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 12.]]\n"
+      "[[12.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a Matmul op that takes 'matrix1' and 'matrix2' as inputs.\n",
+    "# The returned value, 'product', represents the result of the matrix\n",
+    "# multiplication.\n",
+    "product = tf.matmul(matrix1, matrix2)\n",
+    "with tf.Session() as sess:\n",
+    "    print(sess.run(product))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -192,29 +213,37 @@
     "# The output of the op is returned in 'result' as a numpy `ndarray` object.\n",
     "with tf.Session() as sess:\n",
     "    result = sess.run(product)\n",
-    "    print result"
+    "\n",
+    "    print (type(result))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 2.7)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
